--- a/site/frontend/package.json
+++ b/site/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.9",
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
