--- a/site/backend/package.json
+++ b/site/backend/package.json
@@ -20,6 +20,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.2",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -41,6 +42,7 @@
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "slugify": "^1.6.6",
     "validator": "^13.12.0"
   }
